# merriam-webster

./: Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
examples/: Cargo.toml  README.md
examples/src/: definition.rs  top-words.rs
merriam-webster-http/: Cargo.toml  README.md
merriam-webster-http/src/: connector.rs  error.rs  lib.rs
merriam-webster-model/: Cargo.toml  README.md
merriam-webster-model/src/: lib.rs  top_words.rs
merriam-webster-model/src/entry/: alternate_headwords.rs  attribution_of_quote.rs  biographical_name_wrap.rs  called_also_note.rs  cognate_cross_references.rs  defined_run_ons.rs  entry.rs  etymology.rs  headword_information.rs  homograph.rs  inflections.rs  labels.rs  mod.rs  quotation_section.rs  run_in.rs  supplemental_information_note.rs  synonym_section.rs  tables.rs  undefined_run_ons.rs  usage_notes.rs  usage_section.rs  variants.rs  verbal_illustrations.rs
merriam-webster-model/src/entry/sense/: defining_text.rs  definition_section.rs  divided_sense.rs  mod.rs  parenthesized_sense_sequence.rs  sense_number.rs  sense_sequence.rs  truncated_sense.rs  verb_divider.rs
merriam-webster-model/tests/: entry.rs
merriam-webster-model/tests/words/: -fer.json  ally.json  alpha.json  bolster.json  chat.json  creator.json  essentialism.json  fall_foul_of.json  gaslighting.json  grandmother.json  hoo.json  joint.json  mean.json  milf.json  mush.json  nuance.json  rapper.json  resolution.json  rizz.json  silly.json  synonym.json  translate.json  tube.json  vagary.json  words.sh  zenith.json
merriam-webster-transformers/: Cargo.toml  README.md
src/: alternate_headwords.rs  artwork.rs  called_also_note.rs  defined_run_ons.rs  directional_cross_reference_section.rs  entry.rs  first_known_use.rs  headword_information.rs  inflections.rs  lib.rs  meta.rs  pronunciations.rs  quotation_section.rs  short_definitions.rs  supplemental_information_note.rs  synonym_section.rs  undefined_run_ons.rs  usage_notes.rs  usage_section.rs  variants.rs  verbal_illustrations.rs
src/sense/: binding_substitute.rs  defining_text.rs  divided_sense.rs  mod.rs  truncated_sense.rs
tests/words/: Lincoln.json  aesthetic.json  an.json  ane.json  annular.json  balls.json  banana.json  cardi.json  constitution.json  dislimned.json  dude.json  emulate.json  faucet.json  fava.json  featherweight.json  follow.json  humble.json  justice.json  limerick.json  mascara.json  mendelism.json  metabolism.json  pronoun.json  random.json  stallion.json  voracity.json  with.json  yeet.json
