[workspace]
members = [
	"examples",
	"merriam-webster-http",
	"merriam-webster-model"
]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/fyko/merriam-webster"
repository = "https://github.com/fyko/merriam-webster"
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
keywords = ["merriam", "webster", "dictionary"]
license = "MIT OR Apache-2.0"
authors = ["Carter Himmel <carter@fyko.net>"]

[workspace.dependencies]
serde = { features = ["derive"], version = "1" }
