[package]
name = "merriam-webster-model"
version = "0.1.0"
edition.workspace = true
description = "Models for the Merriam Webster's Dictionary API"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
anyhow = "1"
serde_json = "1"
serde_path_to_error = "0.1"
